# Omron_LD_ROS_Package

./: .gitignore  .~lock.ROS Diagram.odp#  .~lock.ROS plan_AIV and TM.ods#  DeveloperGuide.adoc  README.md  ROS Diagram.odp  ROS plan_AIV and TM.ods  ROS plan_AIV and TM.xlsx  find-nuc-wifi.bash
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
docs/: DeveloperGuide.adoc
logs/actions_tutorial/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/ld_actions/: build.check.001.log.stderr  build.check.004.log.stderr  build.check.010.log.stderr  build.check.011.log.stderr  build.check.014.log.stderr  build.check.016.log.stderr  build.check.018.log.stderr  build.check.019.log.stderr  build.check.020.log.stderr  build.check.021.log.stderr  build.cmake.000.log.stderr
logs/ld_services/: build.check.000.log.stderr
logs/om_aiv_util/: build.make.002.log.stderr  (+5 more)
src/ld_urdf/: CMakeLists copy.txt  CMakeLists.txt  manifest.xml  package.xml
src/ld_urdf/config/: ld_rviz_config.rviz
src/ld_urdf/launch/: display.launch
src/ld_urdf/rviz/: urdf.rviz
src/ld_urdf/src/: joints_publisher.cpp
src/ld_urdf/urdf/: LD_Platform.gv  LD_Platform.urdf  LD_Platform.urdf.xacro
src/ld_visualisation/: CMakeLists.txt  manifest.xml  package.xml
src/ld_visualisation/config/: ld_rviz_config.rviz
src/ld_visualisation/launch/: display.launch
src/ld_visualisation/map/: data.map
src/ld_visualisation/param/: vis_param.yaml
src/ld_visualisation/src/: data_points_marker.cpp  goals_marker.cpp  joints_publisher.cpp
src/ld_visualisation/src/do_task/: goto_goal.cpp  goto_point.cpp
src/ld_visualisation/urdf/: LD_Platform.urdf.xacro
(+2828 files in other folders)
